# kms-composite

./: libmpc-client.c  meson.build
examples/: dumbfb_rect.c  egl_rect.c  meson.build
include/: compositor.h  libmpc-client.h  protocol.h
include/shared/: dumb_fb.h  helper.h
shared/: dumb_fb.c  helper.c
src/: compositor.c  main.c  protocol.c
